--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vuetify": "^2.2.18"
+        "vue-router": "^3.1.6",
+        "vuetify": "^2.2.18",
+        "vuex": "^3.1.3"
     }
 }
